data/aws-easy/codeparrot-small-tf/variable-security_ssh-security_web-instance/sample-9/main.tf
terraform {
  required_providers {
    aws = {
      source  = "hashicorp/aws"
    }
  }
}

# Provider Block AWS
provider "aws" {
  profile = "default"
  region  = "us-east-1"
}

# Create variable 
variable "name_0" {
  description = "Name of the instance"
  default     = "terraform-example"
}

# variable block
variable
variable "name_1" {
  description = "Instance type"
  default     = "t2.micro"
}

# make variable
variable
variable "name_2" {
  description = "Name of the SSH keypair to use in AWS."
  default     = "terraform-example"
}

# create variable block
variable
variable "name_3" {
  description = "Data to pass to instance"
  default     = "#!/bin/bash\necho ECS_CLUSTER=example-ecs-cluster --cluster=example-ecs-cluster --key-name=${var.name_2} --cluster=example-ecs-cluster --data-dir=/var/lib/ecs/ecs.json --name=my-instance"
}

# Create Security Group
resource "aws_security_group" "name_4" {
  name        = "terraform-example-sg"
  description = "Used in the terraform"
  vpc_id      = "${aws_vpc.example.id}"

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 8
    to_port     = 8
    protocol    = "icmp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = -1
    to_port     = -1
    protocol    = "icmp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 0
    to_port     = 0
    protocol    = "-
}

# Create Security Group
resource
}

# Create EC2 Instance
resource
}
